style.css
@font-face {
  font-family: "Cooper BT";
  src: url("fonts/CooperLtBT-Regular.woff2") format("woff2");
  font-weight: normal;
}

@font-face {
  font-family: "Cooper BT";
  src: url("fonts/CooperLtBT-Bold.woff2") format("woff2");
  font-weight: bold;
}

body {
  text-align: center;
}

.title {
  font-family: "Cooper BT";
  font-weight: bold;
  font-size: 67pt;
  color: #cc0014;
  margin-bottom: 0;
}

.subtitle {
  font-family: "Cooper BT";
  font-weight: normal;
  font-size: 36pt;
  color: #000000;
  margin-top: 0;
  margin-bottom: 20%;
}

.link {
  font-family: "Cooper BT";
  font-weight: normal;
  font-size: 36pt;
  color: #000000;
  padding-top: 20%;
}

.pretext {
  font-family: "Cooper BT";
  font-weight: normal;
  font-size: 30pt;
  color: #a6a6a6;
  margin-bottom: 0;
}

.ip {
  font-family: "Cooper BT";
  font-weight: bold;
  font-size: 36pt;
  color: #000000;
  margin-top: 0;
}

